@@ -1,4 +1,5 @@
 5.0-alpha2
+ * Upgrade Dropwizard Metrics to 4.2.19 (CASSANDRA-14667)
  * Upgrade caffeine cache and fix CIDR permissions cache invalidation (CASSANDRA-18805)
  * Remove deprecated properties in CompressionParams (CASSANDRA-18742)
  * Add support for repair coordinator to retry messages that timeout (CASSANDRA-18816)
